# jive5ab

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md  requirements.txt  test-multistream.scr
CVSROOT/: doMail.sh  loginfo  modules  notify
cmake/: FindEtransfer.cmake  FindSSAPI.cmake  SelectUDT.cmake  TargetArch.cmake  jiveUtil.cmake
cmake/debian/: postinst  preinst
doc/: INSTALL  changelog  flexbuf.recording.txt
doc/source/: channel-dropping.rst  comments-on-record.rst  conf.py  data-format.rst  flexbuff.rst  index.rst  jive5ab-commands-sets.rst  jive5ab-commands.rst  jive5ab-data-transfer.rst  jive5ab-notes.rst  jive5ab-program.rst  multiple-independent-data-transfer.rst  non-bank.rst  running-jive5ab.rst  scan-names.rst  vsi-s-commands.rst
evlbi5a/: DirList.py  INSTALL  JIVECondition.py  Makefile  SSErase.py  StartJ5  atomic.h  bin.cc  bin.h  bittwiddlinghacks.h  block.cc  block.h  blockpool.cc  blockpool.h  boyer_moore.cc  bqueue.cc  bqueue.h  buffering.cc  buffering.h  busywait.cc  byteorder.cc  byteorder.h  carrayutil.h  chain.cc  chain.h  chainstats.cc  chainstats.h  circular_buffer.cc  circular_buffer.h  constraints.cc  constraints.h  countedpointer.h  counter.cc  counter.h  data_check.cc  data_check.h  dayconversion.cc  dayconversion.h  directory_helper_templates.h  dosyscall.cc  (+109 more)
evlbi5a/boost/type_traits/: is_unsigned.hpp
evlbi5a/libudt5ab/: Makefile  api.cpp  common.h  core.cpp  core.h  queue.cpp
evlbi5a/mk5command/: bankinfoset.cc  bankswitch.cc  bufsize.cc  clockset.cc  constraints.cc  data_check_5a.cc  data_check_dim.cc  debug.cc  debuglevel.cc  diag.cc  dirinfo.cc  disk2file.cc  disk2file_vbs.cc  disk2net.cc  disk2net_vbs.cc  disk2out.cc  disk_info.cc  diskfill2file.cc  diskstatemask.cc  dot.cc  dot_set.cc  dtsid.cc  error.cc  evlbi.cc  file2check.cc  file2disk.cc  file2mem.cc  fill2out.cc  get_stats.cc  in2disk.cc  in2net.h  in2netsupport.cc  in2netsupport.h  interpacketdelay.cc  itcp_id.cc  layout.cc  led.cc  mem2file.cc  mem2net.cc  mem2sfxc.cc  (+57 more)
evlbi5a/nossapi/: xlrdbcommon.h  xlrtypes.h
evlbi5a/threadfns/: kvmap.cc  multisend.cc  multisend.h
libsrt5ab/: CMakeLists.txt
libsrt5ab/srtcore/: api.cpp  api.h  buffer_rcv.h  buffer_snd.h  cache.h  channel.cpp  channel.h  common.cpp  core.cpp  core.h  crypto.cpp  crypto.h  epoll.cpp  epoll.h  fec.cpp  group.h  handshake.cpp  list.h  logging.h  netinet_any.h  packet.h  srt_c_api.cpp  srt_udt.h  sync_posix.cpp  udt-org.h  udt.h  window.h
libudt11/: ccc.h  udt.h  udt11_api_v1.cc  udt11_api_v1.h  udt11_api_v2.cc  udt11_api_v2.h  udt11_ccc.cc  udt11_ccc.h  udt11_exception.cc  udt11_exception.h  udt11_options.h  udt11_perfmon.cc  udt11_perfmon.h
libudt5ab/: CMakeLists.txt  Makefile  api.cpp  api.h  buffer.cpp  cache.cpp  ccc.cpp  ccc.h  channel.cpp  common.cpp  common.h  core.cpp  core.h  epoll.cpp  md5.cpp  packet.cpp  packet.h  queue.cpp  queue.h  udt.h
scripts/: CMakeLists.txt  DirList.py  JIVECondition.py  SSErase.py  StartJ5  m5copy  m6sg_mount  scan_copy  unit_test.py
src/: CMakeLists.txt  Makefile  RELEASE  atomic.h  auto_array.h  bin.h  bittwiddlinghacks.h  block.cc  block.h  blockpool.cc  blockpool.h  boyer_moore.cc  boyer_moore.h  bqueue.h  busywait.h  byteorder.cc  chain.cc  chain.h  chainstats.cc  chainstats.h  circular_buffer.h  constraints.h  countedpointer.h  cpp_dechannelizer-32.cc  cpp_dechannelizer-64.cc  cpp_dechannelizer.cc  data_check.cc  data_check.h  dayconversion.h  dotzooi.cc  dynamic_channel_extractor.cc  errorqueue.cc  errorqueue.h  etransfer.cc  etransfer.h  evlbidebug.cc  evlbidebug.h  ezexcept.h  flagstuff.h  fptrhelper.h  (+87 more)
src/boost/: rational.hpp  static_assert.hpp
src/boost/mpl/: assert.hpp
src/libudt5ab/: channel.cpp  core.cpp  udt.h
src/mk5command/: ackperiod.cc  bankinfoset.cc  clockset.cc  constraints.cc  data_check_5a.cc  data_check_dim.cc  datastream.cc  dirinfo.cc  dirinfo_vbs.cc  disk2etransfer.cc  disk2etransfer_vbs.cc  disk2file.cc  disk2file_vbs.cc  disk2net.cc  disk2net_vbs.cc  disk2out.cc  disk_info.cc  diskstatemask.cc  dot.cc  dot_set.cc  error.cc  evlbi.cc  file2disk.cc  fill2out.cc  get_stats.cc  group_def.cc  in2disk.cc  in2net.cc  in2net.h  in2netsupport.h  interpacketdelay.cc  itcp_id.cc  layout.cc  mem2net.cc  mem2sfxc.cc  mem2time.cc  mk5.cc  mk5.h  mk5a_mode.cc  mk5c_packet.cc  (+39 more)
src/nossapi/: xlrapi.h  xlrdbcommon.h  xlrtypes.h
src/threadfns/: chunk.cc  chunk.h  chunkmakers.cc  chunkmakers.h  do_push_block.h  kvmap.h  multifdreader.h  multisend.cc  multisend.h  netreader.h  per_sender.cc  per_sender.h  socketreader.h  srtreader.h  udpreader.h  udpsnorreader.h  udpsreader.cc  udpsreader.h  udtreader.h
